UI Fixes; Better Alignment of View/Edit Buttons; Nav Drop Down Fix
Nav dropdown icons were not visible when necessary on small
devices.

--- a/assets/style.css
+++ b/assets/style.css
@@ -20,6 +20,8 @@ h1 {
 
 .navbar-brand { font-weight: bold; }
 
+.navbar-toggle .icon-bar{ background-color: #000;}
+
 .well {
 	background: #fff;
 	padding: 30px;
